--- a/src/app/pages/go-live-page/go-live-page.component.scss
+++ b/src/app/pages/go-live-page/go-live-page.component.scss
@@ -7,60 +7,55 @@
 
 }
 
-.sidenav-container{
-  height:100%;
-
-}
-.sidenav{
-  width: 11em;
-  // height: 100em;
-  background-color: #335C67;
-  box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12), 0 5px 5px -3px rgba(0, 0, 0, 0.3);
-  .navlogo{
-    color: #335C67;
-    display: flex;
-    background-color: white;
-    img{
-      margin: auto;
-    }
-    .navlogo-text{
-      line-height: 3em;
-      height: 3em;
-      color: #335C67;
-      text-align: center;
-      margin: auto;
-      font-weight: 700;
-    }
-  }
-  .sidediv{
-    height:4em;
-    .sidebutton{
-      color: white;
-      line-height: 4em;
-      width: 100%;
-    }
-    .chosenButton{
-      color: white;
-      line-height: 4em;
-      width: 100%;
-      background-color: #E69317;
-      }
-    }
-  .bottom-nav{
-    position: absolute;
-    bottom: 0;
-    display: flex;
-    flex-direction: column;
-    }
-  }
-.sidenav-content{
-  margin-top:3em;
+.go-live-container{
+  height: 100%;
 }
 
-:host{
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+.attendance-list{
+  align-items: initial;
+  .overlay-present{
+    display: flex;
+    align-items: center;
+    width:100%;
+    height: 100%;
+    background-color: rgba(165,190,0,0.5);
+    color: #335367;
+    .participant-image{
+      border-radius: 100%;
+    }
+  }
+  .overlay-absent{
+    display: flex;
+    align-items: center;
+    width:100%;
+    height: 100%;
+    background-color: rgba(85,83,88,0.5);
+    color: #335367;
+    .participant-image{
+      border-radius: 100%;
+    }
+  }
+}
+
+.image-container{
+  display: flex;
+  .closer-look-image{
+    border-radius: 100%;
+    margin:auto;
+  }
+}
+
+.closer-look-title{
+  justify-content: center;
+  padding: 15px 0 15px 0
+}
+.closer-look-content{
+  display:flex;
+  flex-direction: column;
+  .closer-look-name{
+    margin: auto;
+  }
+  .closer-look-position{
+    margin: auto;
+  }
 }
