--- a/src/app/pages/attendee-profile/attendee-profile.component.html
+++ b/src/app/pages/attendee-profile/attendee-profile.component.html
@@ -28,108 +28,58 @@
     <div class="page">
       <!-- Back Button-->
       <div class="header">
-        <mat-icon [routerLink]="['/attendees']">arrow_back</mat-icon>
+        <mat-icon [routerLink]="['/',eventId,'attendees']">arrow_back</mat-icon>
         <b>   Edit Attendee's Particular  </b>
       </div>
       <!-- Form Fields-->
       <mat-card>
         <mat-card-content>
-          <form class="form" action="index.html" method="post">
+          <form class="form">
             <table>
               <tr>
                 <td>
                   <mat-form-field class="">
                     <mat-label>Name</mat-label>
-                    <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
+                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.participantName" placeholder="{{sth}}">
                   </mat-form-field>
-
-                  <br>
-                  <mat-form-field class="">
-                    <mat-label>participantID</mat-label>
-                    <input matInput class="" type="number" name="" value="" placeholder="{{sth}}">
-                  </mat-form-field>
-
-                  <br>
-                  <mat-form-field class="">
-                    <mat-label>nationality</mat-label>
-                    <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
-                  </mat-form-field>
-
-                  <br>
-                  <mat-form-field class="">
-                    <mat-label>speaking</mat-label>
-                    <input matInput class="" type="number" name="" value="" placeholder="{{sth}}">
-                  </mat-form-field>
-
                   <br>
                   <mat-form-field class="">
                     <mat-label>uuid</mat-label>
-                    <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
+                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.uuid" placeholder="{{sth}}">
+                  </mat-form-field>
+                  <br>
+                  <mat-form-field class="">
+                    <mat-label>Remark</mat-label>
+                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.remark" placeholder="{{sth}}">
                   </mat-form-field>
                 </td>
-
                 <td>
                   <mat-form-field class="">
                     <mat-label>position</mat-label>
-                    <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
+                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.position" placeholder="{{sth}}">
                   </mat-form-field>
 
                   <br>
                   <mat-form-field class="">
                     <mat-label>organization</mat-label>
-                    <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
+                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.organization" placeholder="{{sth}}">
                   </mat-form-field>
-
-                  <br>
-                  <mat-form-field class="">
-                    <mat-label>careerField</mat-label>
-                    <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
-                  </mat-form-field>
-
                   <br>
                   <mat-form-field class="">
                     <mat-label>major</mat-label>
-                    <input matInput class="" type="number" name="" value="" placeholder="{{sth}}">
+                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.major" placeholder="{{sth}}">
                   </mat-form-field>
 
                   <br>
                   <mat-form-field class="">
                     <mat-label>minor</mat-label>
-                    <input matInput class="" type="number" name="" value="" placeholder="{{sth}}">
+                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.minor" placeholder="{{sth}}">
                   </mat-form-field>
                 </td>
               </tr>
             </table>
 
-            <br>
-            <mat-form-field class="">
-              <mat-label>remark</mat-label>
-              <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
-            </mat-form-field>
-
-            <!-- photo upload -->
-
-            <!-- drag & drop container
-
-              <div class="drop-container" ngFileDrop [options]="options" (uploadOutput)="onUploadOutput($event)" [uploadInput]="uploadInput" [ngClass]="{ 'is-drop-over': dragOver }">
-                <h1>D </h1>
-              </div>
-            -->
-
-            <br>
-            Avatar <br>
-            <label class="upload-button">
-              <input type="file" ngFileSelect [options]="options" (uploadOutput)="onUploadOutput($event)" [uploadInput]="uploadInput" multiple>
-              or choose file(s)
-            </label>
-
-            <button type="button" class="start-upload-btn" (click)="startUpload()">
-              Start Upload
-            </button>
-
-            <!-- submit button -->
-            <br><br><br>
-            <button mat-raised-button  type="button" name="button" color="primary" [routerLink]="['/attendees']">Submit</button>
+            <button mat-raised-button  type="button" name="button" color="primary" (click)="createNewAttendee()">Submit</button>
 
           </form>
         </mat-card-content>
