--- a/src/app/pages/attendees/attendees.component.html
+++ b/src/app/pages/attendees/attendees.component.html
@@ -48,54 +48,46 @@
   <mat-sidenav-content class="sidenav-content">
     <div class="page-container">
       <!-- Add New Attendee Button-->
-      <button class="addNewBotton" mat-raised-button color="primary" [routerLink]="['./attendee-profile']"> + New Attendee </button>
+      <button class="addNewBotton" mat-raised-button color="primary" [routerLink]="['/',eventId,'attendee-profile']"> + New Attendee </button>
       <br>
 
       <!-- table view-->
-      <mat-form-field>
+      <!-- <mat-form-field>
         <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
-      </mat-form-field>
-      <mat-table #table [dataSource]="dataSource" matSort>
+      </mat-form-field> -->
+      <mat-table #table [dataSource]="attendeeList">
         <ng-container matColumnDef="avatar">
           <mat-header-cell *matHeaderCellDef> Photo </mat-header-cell>
           <mat-cell *matCellDef="let element">
-            <img class="img" src={{element.avatar}} alt="photo of MA">
+            <img class="img" src={{element.remark}} alt="photo of MA">
            </mat-cell>
         </ng-container>
         <ng-container matColumnDef="uuid">
-          <mat-header-cell *matHeaderCellDef mat-sort-header> UUID </mat-header-cell>
+          <mat-header-cell *matHeaderCellDef> UUID </mat-header-cell>
           <mat-cell *matCellDef="let element"> {{element.uuid}} </mat-cell>
         </ng-container>
         <ng-container matColumnDef="name">
-          <mat-header-cell *matHeaderCellDef mat-sort-header> Name </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+          <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+          <mat-cell *matCellDef="let element"> {{element.participantName}} </mat-cell>
         </ng-container>
         <ng-container matColumnDef="position">
           <mat-header-cell *matHeaderCellDef> Position </mat-header-cell>
           <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
         </ng-container>
         <ng-container matColumnDef="organization">
-          <mat-header-cell *matHeaderCellDef mat-sort-header> Organization </mat-header-cell>
+          <mat-header-cell *matHeaderCellDef> Organization </mat-header-cell>
           <mat-cell *matCellDef="let element"> {{element.organization}} </mat-cell>
         </ng-container>
-        <ng-container matColumnDef="isPresent">
+        <!-- <ng-container matColumnDef="isPresent">
           <mat-header-cell *matHeaderCellDef> Present </mat-header-cell>
           <mat-cell *matCellDef="let element">
             <mat-slide-toggle></mat-slide-toggle> <!-- to be changed -->
-          </mat-cell>
-        </ng-container>
+          <!-- </mat-cell>
+        </ng-container> -->
         <ng-container matColumnDef="actions">
           <mat-header-cell *matHeaderCellDef> Actions</mat-header-cell>
-          <mat-cell *matCellDef="let row">
-            <button mat-mini-fab
-                    class="edit-dele-button"
-                    color="accent"
-                    [routerLink]="['./attendee-profile']">
-                    Edit
-            </button>
-            <button mat-mini-fab
-                    class="edit-dele-button"
-                    color="warn">
+          <mat-cell *matCellDef="let element">
+            <button mat-mini-fab class="edit-dele-button" color="warn" (click)="deleteAttendee(element.participantName)">
                      Delete
             </button>
           </mat-cell>
@@ -103,38 +95,7 @@
         <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
         <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
       </mat-table>
-      <mat-paginator [length]="100"
-                      [pageSize]="10"
-                      [pageSizeOptions]="[5, 10, 25, 100]"
-                      showFirstLastButtons>
-      </mat-paginator>
-
       <br><br><br>
-
-      <!-- Card view
-      <div class="grid-content">
-        <mat-card *ngFor="let attendee of attendeesList.attendees" class="card">
-          <div class="img-center">
-            <img mat-card-image
-            src={{attendee.avatar}} alt="photo of MA">
-          </div>
-          <mat-card-content>
-            <div class="txt-center">
-              uuid: {{attendee.uuid}}<br><br>
-              <b>{{attendee.name}}</b><br>
-              {{attendee.position}} <br>
-              {{attendee.organization}}<br><br>
-              <mat-slide-toggle><b>Present</b></mat-slide-toggle>
-            </div>
-          </mat-card-content>
-          <mat-card-actions>
-            <div class="btn-center">
-              <button mat-raised-button color="accent" [routerLink]="['./attendee-profile']"> Edit </button>
-              <button mat-raised-button color="warn"> Delete </button>
-            </div>
-          </mat-card-actions>
-        </mat-card>
-      </div>-->
     </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
