--- a/src/app/components/d3-map-container/d3-map-container.component.html
+++ b/src/app/components/d3-map-container/d3-map-container.component.html
@@ -1,6 +1,6 @@
 <div class="map-container">
 </div>
-<div class="customization" *ngIf="customized">
+<!-- <div class="customization" *ngIf="customized">
   <div *ngFor="let table of tables ; index as i">
     Table {{i+1}}
     <mat-form-field>
@@ -20,4 +20,4 @@
     </button>
   </div>
   <button mat-button (click)="addTable()">Add Table</button>
-</div>
+</div> -->
