--- a/src/app/pages/map/map.component.html
+++ b/src/app/pages/map/map.component.html
@@ -44,9 +44,6 @@
   </mat-sidenav>
   <mat-sidenav-content class="sidenav-content">
     <div>
-      <div>
-        empty
-      </div>
       <!-- <button mat-button (click)="createAMap()">Draw A Map</button> -->
         <mat-form-field>
           <input matInput placeholder="Height" [(ngModel)]="map.height" [ngModelOptions]="{standalone: true}">
@@ -55,16 +52,32 @@
           <input matInput placeholder="Width" [(ngModel)]="map.width" [ngModelOptions]="{standalone: true}">
         </mat-form-field>
         <mat-form-field>
-        <mat-select placeholder="Scale" [(value)]="map.scale">
-          <mat-option *ngFor="let scale of scaleOptions" [value]="scale">
-            {{ scale }}
-          </mat-option>
-        </mat-select>
+        <input matInput placeholder="Scale" [(ngModel)]="map.scale" [ngModelOptions]="{standalone: true}">
+
       </mat-form-field>
     </div>
-    <div *ngIf="mapExistence">
-      <app-d3-map-container [map]="map" [customized]="true" [windowWidth]="windowWidth" [windowHeight]="windowHeight"></app-d3-map-container>
+      <!-- <app-d3-map-container [map]="map" [tables]="tables" [windowWidth]="windowWidth" [windowHeight]="windowHeight" [participants]="participants"></app-d3-map-container> -->
+    <div class="customization">
+      <div *ngFor="let table of tables ; index as i">
+        Table {{i+1}}
+        <mat-form-field>
+          <input matInput placeholder="Table X" [(ngModel)]="table.tableX">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Table Y" [(ngModel)]="table.tableY">
+        </mat-form-field>
+        <mat-form-field>
+          <input matInput placeholder="Table Mac" [(ngModel)]= "table.mac">
+        </mat-form-field>
+        <button mat-icon-button (click)="removeTable(i)">
+          <mat-icon>clear</mat-icon>
+        </button>
+      </div>
     </div>
-    <button mat-button (click)="SaveMap()">Save The Map</button>
+    <div>
+      <button mat-button (click)="addTable()">Add Table</button>
+      <button mat-button (click)="saveMap()">Save The Map</button>
+    </div>
+
   </mat-sidenav-content>
 </mat-sidenav-container>
