--- a/src/app/pages/map/map.component.scss
+++ b/src/app/pages/map/map.component.scss
@@ -52,9 +52,9 @@
     flex-direction: column;
     }
   }
-.sidenav-content{
-  margin-top:3em;
-}
+// .sidenav-content{
+//   margin-top:3em;
+// }
 
 :host{
   position: absolute;
