--- a/src/app/pages/attendees/attendees.component.html
+++ b/src/app/pages/attendees/attendees.component.html
@@ -63,8 +63,8 @@
            </mat-cell>
         </ng-container>
         <ng-container matColumnDef="uuid">
-          <mat-header-cell *matHeaderCellDef> UUID </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{element.uuid}} </mat-cell>
+          <mat-header-cell *matHeaderCellDef> Minor </mat-header-cell>
+          <mat-cell *matCellDef="let element"> {{element.minor}} </mat-cell>
         </ng-container>
         <ng-container matColumnDef="name">
           <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
