--- a/src/app/pages/go-live-page/go-live-page.component.html
+++ b/src/app/pages/go-live-page/go-live-page.component.html
@@ -1,59 +1,65 @@
-<mat-grid-list cols="5" rowHeight="fit" class="go-live-container">
-  <mat-grid-tile [colspan]="1" [rowspan]="4">
-    <div class="total-present-chart">
-      <div>
-        Number of Participants Present
-      </div>
-      <circle-progress
-        [title]="presentList.length"
-        [percent]="presentList.length / (presentList.length+absentList.length)*100"
-        [radius]="80"
-        [outerStrokeWidth]="16"
-        [innerStrokeWidth]="8"
-        [outerStrokeColor]="'#78C000'"
-        [innerStrokeColor]="'#C7E596'"
-        [animation]="true"
-        [animationDuration]="300"
-        [subtitle]="'Present'"
-        [showUnits]="false"
-      ></circle-progress>
-    </div>
-  </mat-grid-tile>
-  <mat-grid-tile [colspan]="3" [rowspan]="4">
-    <div *ngIf="map && tables">
-      <app-d3-map-container [map]="map" [tables]="tables" [windowWidth]="windowWidth" [windowHeight]="windowHeight" ></app-d3-map-container>
-    </div>
-  </mat-grid-tile>
-  <mat-grid-tile [colspan]="1" [rowspan]="3" class="attendance-list">
-    <mat-list>
-      <mat-list-item *ngFor="let present of presentList">
-        <div class="overlay-present">
-          <img src="{{present.url}}" width="40" height="40" class="participant-image"/>
-          <h2>{{present.participantName}}</h2>
-        </div>
-      </mat-list-item>
-      <mat-list-item *ngFor = "let absent of absentList">
-        <div class="overlay-absent">
-          <img src="{{absent.url}}" width="40" height="40" class="participant-image"/>
-          <h2>{{absent.participantName}}</h2>
-        </div>
-      </mat-list-item>
-    </mat-list>
-  </mat-grid-tile>
+<!-- <div *ngIf="map && tables && trackings"> -->
+  <mat-grid-list cols="5" rowHeight="fit" class="go-live-container">
 
-  <mat-grid-tile [colspan]="1" [rowspan]="1">
-    <mat-card>
-      <mat-card-header class="closer-look-title">
-        Get A Closer Look
-      </mat-card-header>
-      <div class="image-container">
-        <img class="closer-look-image" src="https://s3-ap-southeast-1.amazonaws.com/com.viatick/bms/medias/1530005406059micheleAcuto.jpeg" width="50" height="50">
+    <mat-grid-tile [colspan]="4" [rowspan]="3">
+      <div *ngIf="map && participants && absentParticipants">
+        <app-d3-map-container [map]="map" [participants]="participants" [windowWidth]="windowWidth" [windowHeight]="windowHeight" ></app-d3-map-container>
       </div>
-      <mat-card-content class="closer-look-content">
-        <h2 class="closer-look-name">Name</h2>
-        <p class="closer-look-position">Professor of Mexican University Finance</p>
-      </mat-card-content>
-    </mat-card>
-  </mat-grid-tile>
+    </mat-grid-tile>
+    <mat-grid-tile [colspan]="1" [rowspan]="4" class="attendance-list">
+      <div *ngIf="participants !=0 && absentParticipants !=0">
+        <mat-list class="attendance-list-container">
+          <mat-list-item *ngFor="let present of participants">
+            <div class="overlay-present">
+              <img src="{{present.participant.remark}} " width="40" height="40" class="participant-image"/>
+              <h2>{{present.participantName}}</h2>
+            </div>
+          </mat-list-item>
+          <mat-list-item *ngFor = "let absent of absentParticipants">
+            <div class="overlay-absent">
+              <img src="{{absent.participant.remark}}" width="40" height="40" class="participant-image"/>
+              <h2>{{absent.participantName}}</h2>
+            </div>
+          </mat-list-item>
+        </mat-list>
+      </div>
+    </mat-grid-tile>
+    <mat-grid-tile [colspan]="4" [rowspan]="1" >
+      <div class="total-present-chart" *ngIf="participants">
+        <div>
+          Number of Participants Present
+        </div>
+        <circle-progress
+          [title]="participants.length"
+          [percent]="participants.length / (participants.length+absentParticipants.length)*100"
+          [radius]="80"
+          [outerStrokeWidth]="16"
+          [innerStrokeWidth]="8"
+          [outerStrokeColor]="'#78C000'"
+          [innerStrokeColor]="'#C7E596'"
+          [animation]="true"
+          [animationDuration]="300"
+          [subtitle]="'Present'"
+          [showUnits]="false"
+        ></circle-progress>
+      </div>
+    </mat-grid-tile>
 
-</mat-grid-list>
+<!--
+    <mat-grid-tile [colspan]="1" [rowspan]="1">
+      <mat-card>
+        <mat-card-header class="closer-look-title">
+          Get A Closer Look
+        </mat-card-header>
+        <div class="image-container">
+          <img class="closer-look-image" src="https://s3-ap-southeast-1.amazonaws.com/com.viatick/bms/medias/1530005406059micheleAcuto.jpeg" width="50" height="50">
+        </div>
+        <mat-card-content class="closer-look-content">
+          <h2 class="closer-look-name">Name</h2>
+          <p class="closer-look-position">Professor of Mexican University Finance</p>
+        </mat-card-content>
+      </mat-card>
+    </mat-grid-tile> -->
+
+  </mat-grid-list>
+<!-- </div> -->
