--- a/src/app/pages/go-live-page/go-live-page.component.scss
+++ b/src/app/pages/go-live-page/go-live-page.component.scss
@@ -24,7 +24,7 @@
     align-items: center;
     width:100%;
     height: 100%;
-    background-color: rgba(165,190,0,0.5);
+    // background-color: rgba(165,190,0,0.5);
     color: #335367;
     .participant-image{
       width: 40px;
@@ -41,7 +41,7 @@
     align-items: center;
     width:100%;
     height: 100%;
-    background-color: rgba(85,83,88,0.5);
+    // background-color: rgba(85,83,88,0.5);
     color: #335367;
     .participant-image{
       border-radius: 100%;
