--- a/src/app/pages/attendee-profile/attendee-profile.component.html
+++ b/src/app/pages/attendee-profile/attendee-profile.component.html
@@ -40,40 +40,40 @@
                 <td>
                   <mat-form-field class="">
                     <mat-label>Name</mat-label>
-                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.participantName" placeholder="{{sth}}">
+                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.participantName">
                   </mat-form-field>
                   <br>
                   <mat-form-field class="">
                     <mat-label>uuid</mat-label>
-                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.uuid" placeholder="{{sth}}">
+                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.uuid">
                   </mat-form-field>
                   <br>
                   <mat-form-field class="">
                     <mat-label>Remark</mat-label>
-                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.remark" placeholder="{{sth}}">
+                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.remark">
                   </mat-form-field>
                 </td>
                 <td>
                   <mat-form-field class="">
                     <mat-label>position</mat-label>
-                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.position" placeholder="{{sth}}">
+                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.position">
                   </mat-form-field>
 
                   <br>
                   <mat-form-field class="">
                     <mat-label>organization</mat-label>
-                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.organization" placeholder="{{sth}}">
+                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.organization">
                   </mat-form-field>
                   <br>
                   <mat-form-field class="">
                     <mat-label>major</mat-label>
-                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.major" placeholder="{{sth}}">
+                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.major">
                   </mat-form-field>
 
                   <br>
                   <mat-form-field class="">
                     <mat-label>minor</mat-label>
-                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.minor" placeholder="{{sth}}">
+                    <input matInput class="" type="text" [ngModelOptions]="{standalone: true}" [(ngModel)]="participant.minor">
                   </mat-form-field>
                 </td>
               </tr>
