--- a/src/app/pages/add-event-page/add-event-page.component.html
+++ b/src/app/pages/add-event-page/add-event-page.component.html
@@ -10,7 +10,7 @@
 
         <mat-form-field class="">
           <mat-label>Name</mat-label>
-          <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
+          <input matInput class="" type="text" name="" value="">
         </mat-form-field>
 
         <!-- <br>
@@ -22,25 +22,25 @@
         <br>
         <mat-form-field class="">
           <mat-label>Date</mat-label>
-          <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
+          <input matInput class="" type="text" name="" value="" >
         </mat-form-field>
 
         <br>
         <mat-form-field class="">
           <mat-label>Venue</mat-label>
-          <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
+          <input matInput class="" type="text" name="" value="">
         </mat-form-field>
 
         <br>
         <mat-form-field class="">
           <mat-label>Address</mat-label>
-          <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
+          <input matInput class="" type="text" name="" value="">
         </mat-form-field>
 
         <br>
         <mat-form-field class="">
           <mat-label>Postal</mat-label>
-          <input matInput class="" type="text" name="" value="" placeholder="{{sth}}">
+          <input matInput class="" type="text" name="" value="">
         </mat-form-field>
 
         <!-- <br>
